@@ -1,0 +1,6 @@
+require 'test-encoding.rb'
+require 'test-filter.rb'
+require 'test-match.rb'
+require 'test-schema.rb'
+require 'test-syntax.rb'
+require 'test-util.rb'
